envoy-gateway/order-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: order-route
  namespace: order
spec:
  parentRefs:
    - name: envoy-gw
      namespace: envoy-gateway-system
  hostnames:
    - "order.kkuchima.com"
  rules:
    - backendRefs:
        - kind: Service
          name: order-svc
          port: 8080
          weight: 80
        - kind: Service
          name: order-svc-canary
          port: 8080
          weight: 20
      matches:
        - path:
            type: PathPrefix
            value: /
